# printscr

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  GpuFrame.cpp  GpuFrame.h  Logger.h  OutputModule.cpp  OutputModule.h  PreviewModule.cpp  PreviewModule.h  ScreenCapture.cpp  ScreenCapture.h  SystemInfo.cpp  SystemInfo.h  build_output.txt  flow.md  main.cpp
.agent/workflows/: build.md  run.md
build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
